--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -23,9 +23,16 @@ jobs:
           plugin_isocalendar_duration: half-year
           plugin_languages: yes
           plugin_languages_ignored: html, css
+          plugin_languages_details: bytes-size, percentage
+          plugin_lines: yes
           plugin_followup: yes
           plugin_followup_sections: repositories
           plugin_people: yes
           plugin_people_types: followers, following, sponsors, reviews
+          plugin_habits: yes
+          plugin_habits_from: 200
+          plugin_habits_days: 60
+          plugin_habits_facts: yes
+          plugin_habits_charts: yes
           plugin_stars: yes
           filename: github-metrics.svg
