--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -19,6 +19,7 @@ jobs:
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Asia/Calcutta
+          repositories_affiliations: owner, collaborator, organization_member
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
           plugin_languages: yes
