--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -15,10 +15,13 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.METRICS_TOKEN }}
           user: sachinkumargit
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Asia/Calcutta
+          repositories: 200
+          repositories_batch: 100
           repositories_affiliations: owner, collaborator, organization_member
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
@@ -27,6 +30,7 @@ jobs:
           plugin_languages_details: bytes-size, percentage
           plugin_lines: yes
           plugin_followup: yes
+          plugin_followup_indepth: yes
           plugin_followup_sections: repositories
           plugin_people: yes
           plugin_people_types: followers, following, sponsors, reviews
